--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,14 +4,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
-    <servlet>
-        <servlet-name>1</servlet-name>
-        <servlet-class>first.servlets.WServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>1</servlet-name>
-        <url-pattern>/index</url-pattern>
-    </servlet-mapping>
+
     <servlet>
         <servlet-name>Main</servlet-name>
         <servlet-class>first.servlets.MainServlet</servlet-class>
@@ -20,4 +13,33 @@
         <servlet-name>Main</servlet-name>
         <url-pattern>/main</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Comments</servlet-name>
+        <servlet-class>first.servlets.CommentsServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Comments</servlet-name>
+        <url-pattern>/Comments</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Categories</servlet-name>
+        <servlet-class>first.servlets.CategoriesServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Categories</servlet-name>
+        <url-pattern>/Categories</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Clients</servlet-name>
+        <servlet-class>first.servlets.ClientsServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Clients</servlet-name>
+        <url-pattern>/Clients</url-pattern>
+    </servlet-mapping>
+
+
 </web-app>
